--- a/src/main/resources/appllication-pro.properties
+++ b/src/main/resources/appllication-pro.properties
@@ -1,4 +1,8 @@
-spring.data.mongodb.url=mongodb://mongo:RDaJepjaBxTATXdqCRmIyJRBdSFxcbFp@mongodb.railway.internal:27017
+spring.data.mongodb.host=mongodb.railway.internal
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=mongo
+spring.data.mongodb.password=RDaJepjaBxTATXdqCRmIyJRBdSFxcbFp
+
 
 
 spring.mail.host=smtp.gmail.com
