--- a/src/main/resources/appllication-pro.properties
+++ b/src/main/resources/appllication-pro.properties
@@ -1,5 +1,4 @@
-spring.data.mongodb.host=mongodb.railway.internal
-spring.data.mongodb.port=27017
+spring.data.mongodb.host=mongodb.railway.internal:
 spring.data.mongodb.username=mongo
 spring.data.mongodb.password=RDaJepjaBxTATXdqCRmIyJRBdSFxcbFp
 
