--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=deal-with-car
-spring.data.mongodb.url=mongodb+srv://harsh:093harsh@cluster0.agpji.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.host=mongodb.railway.internal
+spring.data.mongodb.port=27017
+spring.data.mongodb.username=mongo
+spring.data.mongodb.password=RDaJepjaBxTATXdqCRmIyJRBdSFxcbFp
 
 
 spring.mail.host=smtp.gmail.com
