--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=deal-with-car
+# spring.data.mongodb.url=mongodb+srv://harsh:harsh@cluster0.agpji.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 spring.data.mongodb.host=mongodb.railway.internal
 spring.data.mongodb.port=27017
-spring.data.mongodb.username=mongo
-spring.data.mongodb.password=RDaJepjaBxTATXdqCRmIyJRBdSFxcbFp
-
-
+spring.data.mongodb.MONGOUSER=mongo
+spring.data.mongo.MONGOPASSWORD=RDaJepjaBxTATXdqCRmIyJRBdSFxcbFp
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=xs332000@gmail.com
