--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=deal-with-car
-# spring.data.mongodb.url=mongodb+srv://harsh:harsh@cluster0.agpji.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.url=mongodb://mongo:RDaJepjaBxTATXdqCRmIyJRBdSFxcbFp@mongodb.railway.internal:27017
+
+spring.data.mongodb.url=mongodb://mongo:RDaJepjaBxTATXdqCRmIyJRBdSFxcbFp@mongodb.railway.internal:27017soriung
+
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
