--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=deal-with-car
 
-spring.data.mongodb.url=mongodb://mongo:RDaJepjaBxTATXdqCRmIyJRBdSFxcbFp@mongodb.railway.internal:27017soriung
+spring.data.mongodb.url=mongodb://mongo:RDaJepjaBxTATXdqCRmIyJRBdSFxcbFp@shinkansen.proxy.rlwy.net:34565
 
 
 spring.mail.host=smtp.gmail.com
