--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=deal-with-car
-spring.data.mongodb.url=mongodb+srv://harsh:harsh@cluster0.agpji.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.url=mongodb+srv://harshk:harshk@cluster0.agpji.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
