--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=deal-with-car
-# spring.data.mongodb.url=mongodb+srv://harshk:harshk@cluster0.agpji.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-spring.data.mongodb.uri=mongodb://mongo:RDaJepjaBxTATXdqCRmIyJRBdSFxcbFp@mongodb.railway.internal:27017
+spring.data.mongodb.uri=mongodb+srv://harshk:harshk@cluster0.agpji.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
 spring.data.mongodb.database=car
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
